@@ -181,6 +181,7 @@ Interface changes
   SCIPdetermineNVarsAffectedSym(), SCIPcomputeComponentsSym(), and SCIPextendSubOrbitope(), SCIPgenerateOrbitopeVarsMatrix() for symmetry computations
 - new API functions SCIPvarIsRelaxationOnly() and SCIPvarMarkRelaxationOnly() to query and set, resp., whether a variable is marked as relaxation-only
 - new API functions SCIPconshdlrGetNUpdateConss() and SCIPconshdlrGetUpdateConss(), for expert users only
+- new API function SCIPgetNConflictDualproofsApplied()
 
 ### Command line interface
 
@@ -308,6 +309,7 @@ Fixed bugs
 ----------
 
 - fix and improve memory handling in symmetry computation
+- fix shown number of applied conflicts in solving statistics
 
 Miscellaneous
 -------------
